Finalizando desafio: Implementação e uso do Prettier
